force-app/main/default/objects/ssot__Address__dlm/fields/ssot__AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>ssot__AddressLine2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AddressLine2</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>