force-app/main/default/objects/ssot__Address__dlm/fields/ssot__AddressType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AddressType__c</fullName>
    <label>Address Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AddressType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>