force-app/main/default/objects/ssot__Address__dlm/fields/ssot__ContactPointPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactPointPhoneId__c</fullName>
    <label>Contact Point Phone</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContactPointPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>