force-app/main/default/objects/ssot__Address__dlm/fields/ssot__CountryName__c.field-meta.xml
<CustomField>
    <fullName>ssot__CountryName__c</fullName>
    <label>Country Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CountryName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>