force-app/main/default/objects/ssot__Address__dlm/fields/ssot__ProvinceStateId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProvinceStateId__c</fullName>
    <label>State Province Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProvinceStateId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>