force-app/main/default/objects/ssot__Address__dlm/fields/ssot__rel_1697761211304_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761211304_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address_StateProvinceCode_map_StateP_rel</label>
    <referenceTo>ssot__StateProvince__dlm</referenceTo>
    <relationshipLabel>Address_StateProvinceCode_map_StateP_rel</relationshipLabel>
    <relationshipName>rel_1697761211304_end</relationshipName>
    <type>Lookup</type>
</CustomField>