force-app/main/default/objects/ssot__Address__dlm/fields/ssot__rel_1697761211592_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761211592_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address_ProvinceStateId_map_StatePro_rel</label>
    <referenceTo>ssot__StateProvince__dlm</referenceTo>
    <relationshipLabel>Address_ProvinceStateId_map_StatePro_rel</relationshipLabel>
    <relationshipName>rel_1697761211592_end</relationshipName>
    <type>Lookup</type>
</CustomField>