force-app/main/default/objects/ssot__Address__dlm/fields/ssot__rel_1697761212018_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761212018_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address_ContactPointPhoneId_map_Cont_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>Address_ContactPointPhoneId_map_Cont_rel</relationshipLabel>
    <relationshipName>rel_1697761212018_end</relationshipName>
    <type>Lookup</type>
</CustomField>