force-app/main/default/objects/ssot__Address__dlm/fields/ssot__StateProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__StateProvinceCode__c</fullName>
    <label>[DoNotUse]State Province Code</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StateProvinceCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>